// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should be able to call the default onChange function when no onChange callback provided 1`] = `
.c0 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 0 3em 0 1.25em;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #000;
  line-height: 1.5;
}

<ForwardRef
  items={
    Array [
      Object {
        "id": "1",
        "value": "test",
      },
    ]
  }
  onChange={[Function]}
  selectedOption=""
>
  <styled.select
    onChange={[Function]}
    value=""
  >
    <select
      className="c0"
      onChange={[Function]}
      value=""
    >
      <option
        id="1"
        key="1"
        value="test"
      >
        test
      </option>
    </select>
  </styled.select>
</ForwardRef>
`;

exports[`Select should render 1`] = `
.c0 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 0 3em 0 1.25em;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #000;
  line-height: 1.5;
}

<select
  className="c0"
  onChange={[Function]}
  value=""
>
  <option
    id="1"
    value="test"
  >
    test
  </option>
</select>
`;

exports[`Select should render option groups 1`] = `
.c0 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 0 3em 0 1.25em;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #000;
  line-height: 1.5;
}

<select
  className="c0"
  onChange={[Function]}
  value="Label 1"
>
  <optgroup
    label="Group 1"
  >
    <option
      id="1"
      value="Label 1"
    >
      Label 1
    </option>
    <option
      id="2"
      value="Label 2"
    >
      Label 2
    </option>
  </optgroup>
  <optgroup
    label="Group 2"
  >
    <option
      id="3"
      value="Extra long line of text which will overflow the select container."
    >
      Extra long line of text which will overflow the select container.
    </option>
  </optgroup>
</select>
`;

exports[`Select should render selected option 1`] = `
.c0 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 0 3em 0 1.25em;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #000;
  line-height: 1.5;
}

<select
  className="c0"
  onChange={[Function]}
  value="test"
>
  <option
    id="1"
    value="test"
  >
    test
  </option>
</select>
`;

exports[`Select should render with name 1`] = `
.c0 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 0 3em 0 1.25em;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #000;
  line-height: 1.5;
}

<select
  className="c0"
  onChange={[Function]}
  value=""
>
  <option
    id="1"
    value="test"
  >
    test with name
  </option>
</select>
`;
